RESOLVED FIXED220834
Videos on Facebook Stories do not play
https://bugs.webkit.org/show_bug.cgi?id=220834
Summary Videos on Facebook Stories do not play
Peng Liu
Reported 2021-01-21 16:06:17 PST
Videos on Facebook Stories do not play
Attachments
Patch (1.48 KB, patch)
2021-01-21 16:13 PST, Peng Liu
no flags
Peng Liu
Comment 1 2021-01-21 16:06:56 PST
Peng Liu
Comment 2 2021-01-21 16:13:07 PST
EWS
Comment 3 2021-01-21 17:10:57 PST
Committed r271725: <https://trac.webkit.org/changeset/271725> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418096 [details].
Karl Dubost
Comment 4 2022-11-21 17:30:04 PST
Karl Dubost
Comment 5 2022-11-21 17:49:27 PST
Note You need to log in before you can comment on or make changes to this bug.