Videos on Facebook Stories do not play https://bugs.webkit.org/show_bug.cgi?id=220834

Reviewed by Jer Noble.

Add a quirk (for the iOS port) to allow videos (with audio) on Facebook stories to play.

* page/Quirks.cpp:
(WebCore::Quirks::shouldAutoplayForArbitraryUserGesture const):


Canonical link: https://commits.webkit.org/233232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271725 268f45cc-cd09-0410-ab3c-d52691b4dbfc